tests/snapshots/run_wpt_conformance__litert_expand_float16_1D_constant_tensor_to_1D.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
expand.https.any.js expand float16 1D constant tensor to 1D, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[1] @bytes([118, 198]);
  }

  nodes {
    [expandOutput] = expand(operand_0, label="");
  }

  outputs { expandOutput; }
}
