tests/snapshots/run_wpt_conformance__litert_expand_float16_2D_tensor_to_4D.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
expand.https.any.js expand float16 2D tensor to 4D, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    expandInput: f16[1, 6];
  }

  nodes {
    [expandOutput] = expand(expandInput, label="");
  }

  outputs { expandOutput; }
}
